# behavior-analysis

./: .gitignore  LICENSE  README.md
MNN/mouse19_pipeline/: embed_mouse19_aligned.m  generate_videos_from_mouse19_aligned.py  render_overlay_imageio.py  reproject_mouse19_predictions.py
SocialMapper-main/Animator-master/Animator/: DraggableKeypoint2DAnimator.m
SocialMapper-main/MotionMapperUtilities/tSNE/: findPointDensity.m
SocialMapper-main/mice population/: conversion.m
SocialMapper-main/mouseEmbedding/: mouseEmbedding.m  mouse_analysis_standalone.m
SocialMapper-main/utilities/: mySwarmNA.m
scripts/: cleanup_dlc_h5_files.py  dlc_cropping.py  predict_and_package_train200.py  run_3cam_cam3_refresh_with_parallel_dlc.py  run_train200_predictions.py  setsdanncemouse14_wt_cp.py  setsdanncemouse19_wt.py  submit_parallel_dlc_jobs.py
scripts/custom_calib/: MULTI_CAMERA_CALIBRATION_README.md  anipose_integration.py  calibration_integration.py  custom_calibration.py  frame_level_optimizer.py  full_pipeline_example.py  pairwise_anipose_calibration.py  process_3cam_pipeline.py  pyproject.toml  run_custom_calibration.py  set.py  temporal_calibration_optimizer.py  test_3cam_calibration.py  three_camera_anipose_calibration.py  two_camera_anipose_calibration.py
scripts/custom_calib/manual_calibration/: calibration.toml
