[project]
name = "custom_calib"
version = "0.1.0"
description = "Custom Multi-Camera Calibration System for DANNCE"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "opencv-contrib-python>=4.5.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "toml>=0.10.2",
    "gtsam>=4.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_calib*"]

[tool.setuptools]
package-dir = {"custom_calib" = "."}
py-modules = [
    "custom_calibration",
    "frame_level_optimizer", 
    "calibration_integration",
    "run_custom_calibration",
    "anipose_integration",
    "temporal_calibration_optimizer",
    "process_3cam_pipeline",
    "full_pipeline_example",
    "test_3cam_calibration"
]
